# ckanext-matolabtheme

./: CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ini
.github/workflows/: pypi.yml  test.yml
ckanext/matolabtheme/: action.py  auth.py  helpers.py  plugin.py  views.py
ckanext/matolabtheme/assets/: dark.css  script.js  style.css  webassets.yml
ckanext/matolabtheme/i18n/: ckanext-matolabtheme.pot
ckanext/matolabtheme/i18n/de/LC_MESSAGES/: ckanext-matolabtheme.mo  ckanext-matolabtheme.po
ckanext/matolabtheme/i18n/en/LC_MESSAGES/: ckanext-matolabtheme.mo  ckanext-matolabtheme.po
ckanext/matolabtheme/templates/: base.html  footer.html  header.html  page.html
ckanext/matolabtheme/templates/admin/: config.html
ckanext/matolabtheme/templates/home/: index.html
ckanext/matolabtheme/templates/home/snippets/: featured_group.html  promoted.html
ckanext/matolabtheme/templates/matolabtheme/: banner_config.html  dataprivacy.html  dataprotection.html  theme_config.html
ckanext/matolabtheme/templates/package/: read.html
ckanext/matolabtheme/templates/snippets/: package_item.html
ckanext/matolabtheme/templates/user/snippets/: login_form.html
ckanext/matolabtheme/tests/: test_plugin.py
